@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 30-06-2006 changed: a toast message is displayed if last.fm username/password is wrong
  - 30-06-2006 added: visible condition Weather.IsFetched, is true if the weather data is downloaded
  - 30-06-2006 fixed: smb shares with special chars (spaces, %..) in them would fail to use correct authentication information when opening files.
  - 29-06-2006 fixed: While scanning, tag reading and remote thumb lookup was enabled in My Music Files.
